[package]
name = "ds4live"
version = "0.1.0"
authors = ["Renne Sampaio <rennesampaio97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hidapi]
version = "1.2.5"
default_features = false
features = ["linux-static-hidraw"]
